feat: Add connection string, context and service AddDbContext

--- a/LibraryManagementApp/appsettings.json
+++ b/LibraryManagementApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-U70KTRH\\LOCALHOST;Database=ContactBookDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
