fix: Change database name property in the connection string

--- a/LibraryManagementApp/appsettings.json
+++ b/LibraryManagementApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-U70KTRH\\LOCALHOST;Database=ContactBookDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-U70KTRH\\LOCALHOST;Database=LibraryManagementDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
